--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title : Bokreta Safia
-#logo : 
+logo : assets/photo_5792078684071512561_y.jpg
 #description
 #show_downloads:
 theme: jekyll-theme-minimal
